<resources>
    <!--Random string resources-->
    <string name="app_name">WhyAreYouRunning</string>
    <string name="sort_by">Sort by:</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="your_weight">Your Weight</string>
    <string name="your_name">Your Name</string>
    <string name="setup_continue">Continue</string>
    <string name="setup_welcome">Welcome! Please enter your name and weight.</string>
    <string name="date">DATE</string>
    <string name="time">TIME</string>
    <string name="distance">DISTANCE</string>
    <string name="avgspeed">AVGSPEED</string>
    <string name="calories">CALORIES</string>

    <!--Navigation labels-->
    <string name="label_run">Completed Runs</string>
    <string name="label_settings">Settings</string>
    <string name="label_setup">Setup</string>
    <string name="label_statistics">Run Statistics</string>
    <string name="label_tracking">Current Run</string>

    <string-array name="filter_options">
        <item>Date</item>
        <item>Running Time</item>
        <item>Distance</item>
        <item>Average Speed</item>
        <item>Calories Burned</item>
    </string-array>

</resources>